--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Slave trade -- Juvenile fiction'
+- GITenberg
 title: 'The Congo Rovers: A Story of the Slave Squadron'
 url: http://www.gutenberg.org/ebooks/21060
